# nexus

./: .gitignore  .mcp.json  CLAUDE.md  ORG_CHART.md  QEMU_SETUP_GUIDE.md  README.md  REPOS.md  UX-010-IMPLEMENTATION.md  benchmark_rag_perf.py  install_service.sh  nexus_cli.py  pyproject.toml  qemu-setup.sh  qemu-start-vm.sh  requirements.txt  setup_env.sh  start.sh  test_batch_queries.py  test_n1_fixes.py  test_sanitization.py  vercel.json
.claude/: analysis-state.json
.github/workflows/: ci.yml
.omc/: project-memory.json
.omc/sessions/: 7f843551-2dca-4287-b223-9fa1b03b4738.json  b30c0b47-5a16-479a-b9d9-2217cf6e99c8.json  ea3d259c-3240-49cb-9af3-eead36abdf3c.json
config/: agents.yaml  agents.yaml.bak2  agents.yaml.bak3
docker/cli-sandbox/: Dockerfile  entrypoint.sh
docs/: ADR-001-consolidate-orchestration.md  ARCHITECTURE.md  SPEC-RAG-DEBUG-ENDPOINTS.md  connection-pooling.md  self-improvement.md
docs-hub/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
docs-hub/components/: Layout.tsx
docs-hub/pages/: _app.tsx  cli.mdx  comparisons.mdx  index.tsx  install.mdx  org-chart.mdx  overview.mdx  plugin.mdx  sdk.mdx  security.mdx  use-cases.mdx
docs-hub/public/: robots.txt  sitemap.xml
docs-hub/styles/: globals.css
docs/playground-experiments/: HARD_CONSTRAINT.txt  ITERATION_36_FINAL_STATUS.md  ITERATION_36_LEARNING_SYNTHESIS.md  (+7 more)
scripts/: migrate_encrypt_dbs.py
src/: __init__.py  config.py  main.py
templates/: SPEC-TEMPLATE.md
tests/: conftest.py  conftest_org_chart.py  test_approval_gates.py  test_audit_log.py  test_auth_gate.py  test_cli_pool.py  test_config.py  test_connection_pool.py  test_cost_tracker.py  test_db_encryption.py  test_engine.py  test_graph.py  test_jwt.py  test_memory.py  test_observability.py  test_org_chart.py  test_resilience.py  test_security_scanner.py  test_server_auth.py  test_session_store.py  test_slack_listener.py  test_state.py
(+121 files in other folders)
