[project]
name = "nexus"
version = "3.0.0"
description = "NEXUS — Autonomous AI Organization Platform"
requires-python = ">=3.11"
license = "MIT"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S"]
ignore = ["S101", "E501", "E701", "E702", "E731", "S608", "S603", "S110", "E402", "SIM105", "SIM108", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
