[project]
name = "nexus"
version = "3.0.0"
description = "NEXUS — Autonomous AI Organization Platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.49.0,<1.0",
    "fastapi>=0.115.0,<1.0",
    "uvicorn>=0.34.0,<1.0",
    "flask>=3.0.0,<4.0",
    "flask-cors>=4.0.0,<5.0",
    "pydantic>=2.10.0,<3.0",
    "aiohttp>=3.11.0,<4.0",
    "slack-sdk>=3.33.0,<4.0",
    "pyjwt>=2.10.0,<3.0",
    "cryptography>=44.0.0,<45.0",
    "pysqlcipher3>=1.2.0",
    "python-docx>=1.1.0,<2.0",
    "python-pptx>=1.0.0,<2.0",
    "openpyxl>=3.1.0,<4.0",
    "Pillow>=11.0.0,<12.0",
    "ddgs>=7.0.0,<8.0",
    "langgraph>=0.3.0,<1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S"]
ignore = ["S101", "E501", "E701", "E702", "E731", "S608", "S603", "S110", "E402", "SIM105", "SIM108", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
